removed the css ids for each product because the intention behind them will cause problems if products are displayed out of order or if products are removed from the db, and they won't be relevant if we change up the css to fix the 'float' issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,85 +31,6 @@ h1 {
     
 }
 
-/**/
-#Product_1 {
-    
-}
-
-/**/
-#Product_3 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/*Falchion Blades*/
-#Product_9 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
-
-/**/
-#Product_4 {
-    
-}
 footer {
     text-align: center;
 }
